[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "discord-pog-bot"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0"
python = "^3.7"
flask = "^1.1"
motor = "^2.1"
dnspython = "^1.16"
utils = "^1.0"
[tool.poetry.dev-dependencies]
